# WindowsApps

./: .gitignore  Documentation.md  INFO.md  README.md  Release.md  ReleaseInfo.md  eslint.config.js  index.html  package-lock.json  package.json  run-dev-hidden.vbs  run-dev.ps1  tsconfig.app.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml  security-audit.yml
data/AppSettings.db/: LOG
scripts/: prepare-release-manifest.ps1  verify-release-assets.ps1  verify-release-notes.ps1  verify-release-version.ps1
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  apps_scanner.rs  cache.rs  catalog_sync.rs  commands.rs  error.rs  executable_metadata.rs  global_shortcut.rs  icon_extractor.rs  launcher.rs  lib.rs  uninstaller.rs
src-tauri/src/apps_scanner/: registry.rs
src-tauri/src/catalog/: cache.rs  dedup.rs  hydration.rs  icon_cache.rs  incremental.rs  mod.rs  portable.rs  registry.rs  scan_coordinator.rs  scan_settings.rs  source.rs  start_apps.rs  steam.rs  sync.rs  visibility.rs
src-tauri/src/lifecycle/: mod.rs
src-tauri/src/platform/windows/: autostart.rs  change_watcher.rs  drives.rs  executable_metadata.rs  global_shortcut.rs  icon_extractor.rs  install_registry.rs  launcher.rs  mod.rs  shortcut.rs  uninstall_history.rs  uninstaller.rs
src-tauri/src/vpn/: hiddify.rs  mod.rs
src-tauri/tests/fixtures/: catalog_visibility.json
src/components/: AppActionsMenu.tsx  AppCard.tsx  AppDrawer.tsx  AppGrid.test.ts  AppGrid.tsx  AppInfoDialog.tsx  AppNavigation.tsx  AppSidebar.tsx  CategoryNameEditor.tsx  CategorySection.tsx  DeleteCategoryDialog.tsx  FavoritesGrid.tsx  Header.tsx  HiddenGrid.tsx  ScanPrompt.tsx  SettingsPage.test.tsx  SettingsPage.tsx  SortableCategorySection.tsx  UninstallDialog.tsx
src/hooks/: useAppFeedback.ts  useBodyScrollLock.ts  useCatalogNavigation.ts  useDesktopNavigation.ts  useFocusTrap.ts  useSpotlight.ts  useSystemSettings.ts  useUpdater.ts
src/lib/: appDeduplication.ts  appMetadata.test.ts  appMetadata.ts  catalog.test.ts  catalog.ts  catalogChanges.ts  positioning.ts  preferences.test.ts  preferences.ts  system.ts  tauri.ts  vpn.ts
src/store/: appStore.test.ts  appStore.ts  appStoreContext.ts  selectors.ts  storeContext.tsx  useIsLaunching.ts
src/tests/: App.test.tsx  ux-quality.test.tsx
src/types/: app.ts  (+3 more)
(+56 files in other folders)
